--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -5,8 +5,9 @@
  <link rel="stylesheet" type="text/css" href="/CoGe/css/styled.css" />
 
 <TMPL_UNLESS NAME="NO_JQUERY">
- <link rel="stylesheet" type="text/css" href="/CoGe/css/jdMenu.css" />
- <link rel="stylesheet" type="text/css" href="/CoGe/css/jdMenu.slate.css" />
+ <!--<link rel="stylesheet" type="text/css" href="/CoGe/css/jdMenu.css" />
+ <link rel="stylesheet" type="text/css" href="/CoGe/css/jdMenu.slate.css" />-->
+<link rel="stylesheet" type="text/css" href="/CoGe/css/superfish.css" />
 
 <!-- This is the implementation of jquery into the header of all CoGe pages -->
  <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery-1.3.2.js"></SCRIPT>
@@ -16,9 +17,11 @@
 <link rel="stylesheet" type="text/css" href="/CoGe/css/jquery-ui-1.7.custom.css" />
 
  <!--<SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.bgiframe.js"></SCRIPT>-->
-<!-- <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery.dimensions.js"></SCRIPT>-->
- <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery.jdMenu.js"></SCRIPT>
+<!--<SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery.dimensions1.2.js"></SCRIPT>
+ <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery.jdMenu1.4.1.js"></SCRIPT>-->
  <SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/jquery.cookie.js"></SCRIPT>
+<SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/superfish.js"></SCRIPT>
+<SCRIPT language="JavaScript" type="text/javascript" src="/CoGe/js/hoverIntent.js"></SCRIPT>
 <!-- <SCRIPT language="JavaScript" type="text/javascript" src="./js/jquery.jdMenu.packed.js"></SCRIPT>-->
 </TMPL_UNLESS>
 
@@ -44,10 +47,10 @@ jQuery(document).ready(function(){
   setup_button_states();
 });
 
-
+/*
 jQuery(function(){
 jQuery('ul.jd_menu').jdMenu();
-});
+});*/
 function browserAlert()
 {
  alert('Unfortunately, CoGe has been designed to work with the FireFox browser and may not function appropriately with your browser.  Please use FireFox, which can be downloaded from http://www.mozilla.com/en-US/firefox/');
@@ -185,6 +188,11 @@ function add_button_states (ids) {
 }
 //}); 
 
+//initialize superfish plugin (dropdown table)
+$(function() {
+	$('ul.sf-menu').superfish();
+});
+
 </SCRIPT>
 
 <div id=signin_popup class="image_window" style="display:none"></div>
@@ -202,9 +210,9 @@ function add_button_states (ids) {
 	</TMPL_IF>
 	</td>
 	<td>
-	<ul class="jd_menu jd_menu_slate" >
+	<ul class="sf-menu" >
 	 <li><a id=home href="/CoGe/" target="_self">Home</a></li>
-	 <li>Applications
+	 <li><a href='javascript:void(0)'>Applications</a>
 	  <ul>
 	  <li><a href="/CoGe/OrganismView.pl" target="_self">OrganismView</a></li>
 	  <li><a href="/CoGe/CoGeBlast.pl" target="_self">CoGeBlast</a></li>
@@ -216,7 +224,7 @@ function add_button_states (ids) {
 	  <li><a href="/CoGe/TreeView.pl" target="_self">TreeView</a></li>-->
       </ul>
 	</li>
-	<li>Downloads
+	<li><a href='javascript:void(0)'>Downloads</a>
 	 <ul>	   
 	  <li><a href="/CoGe/docs/help/Precomputed_menus_and_lists/CoGe_menus.html" target="_self">Syntenic gene sets</a></li>
 	  <li><a href="/CoGe/docs/help/Code/Code.html" target="_self">CoGe Source Code</a></li>
@@ -226,9 +234,10 @@ function add_button_states (ids) {
 	  <li><a href="#" target="_self">Saved Results</a></li>-->
 	 </ul>
 	</li>
-	<li>Preferences
+	<li><a href='javascript:void(0)'>Preferences</a>
 	 <ul>
-	  <li><a href="#" target="_self">Animation &raquo; </a>
+	   <li><a href="/CoGe/UserPage.pl" target="_self">User Profile</a></li>
+	  <li><a href="#" target="_self">Animation</a>
 	    <ul class="animations">
 	      <li><a href="#" target="_self" onClick="define_animation_speed(0)">Off</a></li>
 	      <li><a href="#" target="_self" onClick="define_animation_speed(600)">&radic; Slow</a></li>
@@ -238,7 +247,7 @@ function add_button_states (ids) {
 	   </li>
 	  </ul>
 	 </li>
-	<li>Help
+	<li><a href='javascript:void(0)'>Help</a>
 	 <ul>
 	      <li><a href="./docs/help/<TMPL_VAR NAME=HELP>" target="_blank">Page Docs</a></li>
 	      <li><a href="/CoGe/docs/help/CoGe/Overview.html" target="_blank">About CoGe</a></li>
