--- a/web/tmpl/index.tmpl
+++ b/web/tmpl/index.tmpl
@@ -120,7 +120,7 @@ To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, ple
 		<a href="/CoGe/FeatView.pl" onmouseover="timing(3)" onmouseout="timing(3,1)" onclick="timing(3,1)" title="FeatView"><img src="/CoGe/picts/carousel/FeatView-logo.png" width="100%" border=0/></a>
 <!--		<a href="/CoGe/MSAView.pl" onmouseover="timing(3)" onmouseout="timing(3,1)" onclick="timing(3,1)" title="MSAView"><img src="/CoGe/picts/carousel/MSAView-logo.png" width="100%" border=0/></a>
 		<a href="/CoGe/TreeView.pl" onmouseover="timing(4)" onmouseout="timing(4,1)" onclick="timing(4,1)" title="TreeView"><img src="/CoGe/picts/carousel/TreeView-logo.png" width="100%" border=0/></a>
--->		<a href="/CoGe/GenomeView.pl" onmouseover="timing(1)" onmouseout="timing(1,1)" onclick="timing(1,1)" title="GenomeView"><img src="/CoGe/picts/carousel/GenomeView-logo.png" width="100%" border=0/></a>
+-->		<a href="/CoGe/OrganismView.pl" onmouseover="timing(1)" onmouseout="timing(1,1)" onclick="timing(1,1)" title="OrganismView"><img src="/CoGe/picts/carousel/OrganismView-logo.png" width="100%" border=0/></a>
 		<a href="/CoGe/CoGeBlast.pl" onmouseover="timing(2)" onmouseout="timing(2,1)" onclick="timing(2,1)" title="CoGeBlast"><img src="/CoGe/picts/CoGeBlast-logo.png" width="100%" border=0/></a>
 <!--		<a href="/CoGe/docs/help/CoGe" onmouseover="timing(7)" onmouseout="timing(7,1)" onclick="timing(7,1)" title="CoGe FAQ"><img src="/CoGe/picts/carousel/FAQ-logo.png" width="100%" border=0/></a>-->
 		<a href="/CoGe/SynMap.pl" onmouseover="timing(4)" onmouseout="timing(4,1)" onclick="timing(4,1)" title="SynMap"><img src="/CoGe/picts/SynMap-logo.png" width="100%" border=0/></a>
@@ -160,6 +160,7 @@ To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, ple
     </TD>
   </TR>
 </TABLE>
+<a href="/awstats/awstats.pl?config=CoGe" target=_new class="small" style="text-align: center;">CoGe's usage stats</a>
 </TMPL_IF>
 
 <TMPL_IF NAME=DISABLE>
@@ -196,6 +197,7 @@ To obtain pre-made lists of syntenic gene sets with links for GEvo analyses, ple
  </TR>
 </TMPL_LOOP>
 </TABLE>
+<a href="/awstats/awstats.pl?config=CoGe" target=_new class="small" style="text-align: center;">CoGe's usage stats</a>
 </TMPL_IF>
 
 
